--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div id="gameDiv" style="max-width:1024px;margin:auto;"></div>
     <script src="js/phaser.min.js"></script>
+    <script src="js/Gamepad.js"></script>
     <script src="js/game.js"></script>
 </body>
 
